<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">App2</string>
    <string name="mode">mode</string>
    <string name="notes">Notes</string>
    <string name="save">save</string>
    <string name="dessertly">DESSERTLY</string>
    <string name="find_the_foodie_in_you">Find the foodie in you</string>
    <string name="start_cooking">Start Cooking</string>
    <string name="capture">capture</string>
    <string name="delete">delete</string>
    <string name="todo" tools:ignore="DuplicateDefinition">TODO</string>
    <string name="add_note" tools:ignore="DuplicateDefinition">Add a note…</string>
    <string name="clear">clear</string>
    <string name="capture_result">Capture Result</string>
    <string name="complete">complete</string>
    <string name="molten">Chocolate Molten Cakes</string>
    <string name="molten_desc">Bake an impressive dinner party dessert with minimum fuss – these
        chocolate puddings, also known as chocolate fondant or lava cake, have a lovely gooey
        centre.</string>
    <string name="molten_text"><b>Ingredients</b>\n
        • 100g butter, plus extra to grease\n
        • 100g dark chocolate, chopped\n
        • 150g light brown soft sugar\n
        • 3 large eggs\n
        • ½ tsp vanilla extract\n
        • 50g plain flour\n
        • single cream, to serve\n\n

        <b>Method</b>\n
        <i>Step 1</i>\nHeat oven to 200C/180C fan/gas 6. Butter 6 dariole moulds or basins well and
        place on a baking tray.\n\n
        <i>Step 2</i>\nPut 100g butter and 100g chopped dark chocolate in a heatproof bowl and set
        over a pan of hot water (or alternatively put in the microwave and melt in 30 second bursts
        on a low setting) and stir until smooth. Set aside to cool slightly for 15 minutes.\n\n
        <i>Step 3</i>\nUsing an electric hand whisk, mix in 150g light brown soft sugar, then 3 large
        eggs, one at a time, followed by ½ tsp vanilla extract and finally 50g plain flour. Divide
        the mixture among the darioles or basins.\n\n
        <i>Step 4</i>\nYou can now either put the mixture in the fridge, or freezer until you\'re ready
        to bake them. Can be cooked straight from frozen for 16 minutes, or bake now for 10-12
        minutes until the tops are firm to the touch but the middles still feel squidgy.\n\n
        <i>Step 5</i>\nCarefully run a knife around the edge of each pudding, then turn out onto
        serving plates and serve with single cream.\n</string>
    <string name="frangipane">Cherry &amp; Almond Frangipane Galette</string>
    <string name="frangipane_desc">Use spelt pastry for this free-form pie, as its nuttiness
        complements the frangipane. The combination of squishy baked cherries and juicy fresh
        ones is lovely.</string>
    <string name="frangipane_text"><b>Ingredients</b>\n
        • 400g cherries , pitted and halved\n
        • 1 tsp caster sugar\n
        • 1 tbsp lemon juice\n
        • 3 tbsp morello cherry conserve\n
        • 1 egg , beaten\n
        • 2 tbsp granulated sugar\n
        • clotted cream, to serve (optional)\n
        <b>For the pastry</b>\n
        • 200g white spelt flour\n
        • 1 tbsp caster sugar\n
        • 120g unsalted butter, chilled and cut into cubes\n
        <b>For the frangipane</b>\n
        • 100g whole, skin-on almonds, toasted\n
        • 15g unsalted butter\n
        • 1 tbsp spelt flour, plus extra for dusting\n
        • ½ tsp vanilla essence\n
        • 50g golden caster sugar\n
        • 1 egg\n\n

        <b>Method</b>\n
        <i>Step 1</i>\nFirst, make the pastry. Sift the flour into a bowl and stir in the sugar and
        a pinch of salt. Add the butter and rub it in with your fingertips until you have a coarse
        crumb consistency. Stir in 2-3 tbsp of ice-cold water and bring the mixture together with
        your hands. Knead it against the side of the bowl, and if it comes together smoothly, squash
        it into a ball. If it\’s still crumbling, add a little more iced water and work it until you
        have a pliable pastry dough. Wrap it in baking parchment and chill for 30 minutes. Meanwhile,
        macerate the cherries in the sugar and lemon juice in a bowl.\n\n
        <i>Step 2</i>\nTo make the frangipane, blitz the almonds in a food processor until finely
        chopped, then add the butter, flour, vanilla extract and sugar, and blitz until combined.
        Add the egg, and blitz again to make a paste.\n\n
        <i>Step 3</i>\nHeat oven to 160C/140C fan/gas 3. On a lightly floured surface, roll out the
        pastry into a large circle about 30cm wide, and the thickness of a pound coin. It doesn\’t
        matter if the edges are split. Slide onto a baking sheet lined with baking parchment, and
        spread over the conserve, leaving about a 4cm border all the way around the edge. Cover this
        with the frangipane, then press half the cherries into it. Fold over the pastry edges to
        encase the edges of the cherries, pressing down the creases so it holds together. Brush with
        the beaten egg and scatter some granulated sugar over the cherries and pastry. Put in the
        freezer for 10 minutes.\n\n
        <i>Step 4</i>\nBake the galette for 45 minutes, then remove from the oven and allow to cool
        for 10-15 minutes. Pour over the remaining fresh cherries and spoon over any juices. Serve
        with clotted cream, if you like.\n</string>
    <string name="sponge">Lemon Sponge Cake</string>
    <string name="sponge_desc">Top this citrussy sponge with lemon icing and candied peel. Greek
        yogurt creates a cake that\'s extra moist and tangy, for an irresistible teatime treat.</string>
    <string name="sponge_text"><b>Ingredients</b>\n
        • 175g unsalted butter, softened, plus extra for the tin\n
        • 175g golden caster sugar\n
        • 3 large eggs\n
        • 3 large unwaxed lemons, zested, plus 4-4 ½ tbsp juice\n
        • 250g self-raising flour\n
        • ½ tsp baking powder\n
        • 100g Greek yogurt\n
        • 400g icing sugar\n
        • Lemon zest or candied peel, to serve (optional)\n
        <b>For the candied peel</b>\n
         • 2 large lemons\n
         • 200g granulated sugar\n\n

        <b>Method</b>\n
        <i>Step 1</i>\nHeat oven to 170C/150C fan/gas 3. Butter a deep, loose-bottomed, 18cm cake
        tin and line the base with baking parchment. \n\n
        <i>Step 2</i>\nBeat the butter and caster sugar together with an electric whisk until fluffy
        and pale in colour. Crack the eggs in one at a time, beating well after each addition, then
        stir in the lemon zest. Fold in the flour, baking powder and ½ tsp salt, then fold in the
        yogurt.\n\n
        <i>Step 3</i>\nSpoon the mixture into the lined tin, smoothing the top with a spatula. Bake
        in the centre of the oven for 50-55 minutes, or until golden brown on top and firm to the
        touch. Cool in the tin for 10 minutes before turning out onto a wire rack to cool completely.
        Will keep in an airtight container for up to four days, or in the freezer for up to a month.\n\n
        <i>Step 4</i>\nWhen you\’re ready to decorate, sieve the icing sugar into a bowl and beat in
        enough of the lemon juice to create a thick icing. Set the cake on a serving plate or cake
        stand, then spoon over the icing, allowing it to drip down the sides a little. Top with the
        lemon zest or candied peel, if using (see below), and cut into generous wedges to serve.\n\n
        <i>Step 5</i>\nTo make candied lemon peel, peel large, wide strips from the lemons using a
        vegetable peeler. Remove any pith with a knife, then julienne the peel into very thin
        matchsticks. Tip the granulated sugar into a saucepan with 200ml water and set over a medium
        heat until the sugar has dissolved. Add the lemon peel and simmer gently for 15 minutes,
        then scoop the peel out using a slotted spoon and set on a piece of kitchen paper to cool.
        Use to decorate the top of your cake.\n</string>
    <string name="tiffin">Chocolate Tiffin</string>
    <string name="tiffin_desc">Go all out and treat yourself to these chocolate tiffin slices, full
        of milk and dark chocolate, raisins and biscuit. Be warned: they won\'t last long!</string>
    <string name="tiffin_text"><b>Ingredients</b>\n
        • 150g butter, cubed, plus extra for the tin\n
        • 3 tbsp caster sugar\n
        • 3 tbsp golden syrup\n
        • 6 tsp cocoa powder\n
        • 225g biscuits, crushed\n
        • handful of raisins\n
        • 110g milk chocolate\n
        • 110g dark chocolate\n\n

        <b>Method</b>\n
        <i>Step 1</i>\nButter and line a 15-20cm tin with baking parchment. In a large saucepan,
        melt the butter, sugar, syrup and cocoa. Stir through the biscuits and raisins.\n\n
        <i>Step 2</i>\nPour the mixture into the prepared tin and press down, then smooth the top
        with the back of a spoon. Microwave both chocolates in short 20 second bursts, stirring
        frequently, until melted. Pour them over the mixture in the tin. Use a palette knife or
        spoon to smooth over, so it\'s completely coated in chocolate.\n\n
        <i>Step 3</i>\nPut the tin into the fridge and leave for about 2 hrs to set, or overnight.
        Run a kitchen knife under the hot tap then cut into squares.\n</string>
    <string name="cheesecake">White Chocolate Cheesecake</string>
    <string name="cheesecake_desc">Make a simple, creamy dessert for a dinner party with very little
        effort. Pairing this white chocolate cheesecake with fresh fruit offsets the
        richness.</string>
    <string name="cheesecake_text"><b>Ingredients</b>\n
        • 300g digestive biscuits\n
        • 150g unsalted butter, melted, plus extra to grease\n
        • 400g white chocolate, broken into pieces\n
        • 300g full-fat cream cheese\n
        • 250g mascarpone\n
        • 300ml double cream\n
        • 200g strawberries or raspberries, to serve\n\n

        <b>Method</b>\n
        <i>Step 1</i>\nCrush the biscuits in a food processor until completely ground. Add butter
        and whizz again until you have the desired crumbly consistency.\n\n
        <i>Step 2</i>\nGrease and line the base of a 23cm deep, loose-bottomed cake tin. Add the
        biscuit mixture to the cake tin and pat it flat. Leave to set in the fridge for
        approximately 30 minutes.\n\n
        <i>Step 3</i>\nBegin melting the chocolate in a heatproof glass bowl over a small pan of
        hot water on a low heat. Stir occasionally to prevent sticking. Remove from the heat and
        leave to cool for 10 minutes until barely warm but still liquid.\n\n
        <i>Step 4</i>\nMeanwhile whisk the cream cheese and mascarpone together. Add double cream
        and keep whisking until the mixture is just holding its own shape. Finally, add the melted
        chocolate and whisk until just combined.\n\n
        <i>Step 5</i>\nSpoon the mixture over the cooled and set biscuit base, then smooth the top.
        Return to the fridge to cool for at least 6 hrs until the topping is set. Finally,
        decorate with fruit.\n</string>
    <string name="panna">Vanilla Panna Cotta</string>
    <string name="panna_desc">Try making this classic Italian dessert with delicate vanilla and a
        fresh strawberry topping. The perfect light sweet for a chilled summer gathering.</string>
</resources>