<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MoltenActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/molten"
                android:textColor="#C1916B"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/molten_desc"
                android:textColor="#815837"
                android:textSize="16sp" />

            <ViewFlipper
                android:id="@+id/view_flipper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/onemolten" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/twomolten" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/threemolten" />

            </ViewFlipper>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_prev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#00FFFFFF"
                    android:onClick="goPrevious"
                    app:srcCompat="@drawable/back" />

                <ImageButton
                    android:id="@+id/btn_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#00FFFFFF"
                    android:onClick="goNext"
                    app:srcCompat="@drawable/forward" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/molten_text"
                android:textColor="#815837"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/notes"
                android:textColor="#C1916B"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:layout_marginEnd="160dp"
                android:backgroundTint="#468A32"
                android:text="@string/save"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/textView_saved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_marginBottom="40sp"
                android:textColor="#815837" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>